# Advent_of_code

./: CMakeLists.txt  clean-all.cmake
include/common/: commons.h
include/runner/: file_utils.h
include/solutions/: aoc_day.h  aoc_day_0.h  aoc_day_1.h  aoc_day_2.h  aoc_days.h
src/: aoc.cpp  tests.cpp
src/runner/: file_utils.cpp
src/solutions/: aoc_day.cpp  aoc_day_0.cpp  aoc_day_1.cpp  aoc_day_2.cpp  aoc_days.cpp
